Remove contact form and fix layout issue with contact section

--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,10 @@ i:hover {
   padding: 80px;
 }
 
+.img-container {
+  padding: 0;
+}
+
 .btn {
   position: relative;
   font-weight: 300;
@@ -268,10 +272,6 @@ section.experience .yellow-bg {
   background-color: #FCB830;
 }
 
-section.experience .profile {
-  padding: 0;
-}
-
 section.experience .profile-photo {
   background-image: url("../images/golden_gate_bridge_cropped.jpg");
   background-position: center center;
@@ -306,52 +306,12 @@ section.contact i {
   margin: 0 20px;
 }
 
-section.contact .contact-form {
-  padding: 0;
-  z-index: 2;
-}
-
-section.contact .form-content {
-  background-image: url("https://images.unsplash.com/photo-1511183436981-723dfccbbb8c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=741&q=80");
+section.contact .satellite {
+  background-image: url("../images/satellite.jpg");
   background-position: center center;
   background-size: cover;
   width: 100%;
   height: 100%;
-  z-index: 2;
-}
-
-section.contact .form-content form {
-  padding: 80px;
-  z-index: 2;
-}
-
-section.contact .form-content form h3 {
-  color: #fff;
-}
-
-section.contact .form-content input {
-  background-color: #FAFAFA;
-  width: 100%;
-  margin: 10px;
-  padding: 5px;
-}
-
-section.contact .form-content textarea {
-  background-color: #FAFAFA;
-  width: 100%;
-  height: 200px;
-  margin: 10px;
-  padding: 5px;
-}
-
-section.contact .form-content .btn-primary {
-  background-color: #30B9C1;
-  color: #fff;
-  border: 1px solid #9A9A9A;
-}
-
-section.contact .form-content .btn-primary:hover {
-  border: 1px solid #30B9C1;
 }
 
 /* FOOTER */
